force-app/zurich-base/main/default/objects/SendDocCUInfo__c/SendDocCUInfo__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene la informacion relacionada con los envios de documentacion que se hacen de manera asincrona a Canal unico (proyecto ZDA)</description>
    <label>Envio doc canal unico</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Num envio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envios doc canal unico</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>