force-app/zurich-base/main/default/objects/SendDocCUInfo__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identificador del caso con el que esta relacionado el envio</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Envios doc canal unico</relationshipLabel>
    <relationshipName>DocSends</relationshipName>
    <type>Lookup</type>
</CustomField>