force-app/zurich-base/main/default/objects/SendDocCUInfo__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comentarios incluidos en el envio de la documentacion</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>