force-app/zurich-base/main/default/objects/SendDocCUInfo__c/fields/ContentDocIds__c.field-meta.xml
<CustomField>
    <fullName>ContentDocIds__c</fullName>
    <description>Lista de identificadores ContentDocumentId de los ficheros que se adjuntan en la peticion. Unicamente para uso interno</description>
    <label>Content doc ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>