force-app/zurich-base/main/default/objects/SendDocCUInfo__c/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>En caso de que el envio este marcado como enviado pero no tenga resultado se ha producido un error no controlado. Este campo servira para no notificar en mas de una ocasion al agente del error.</description>
    <label>Notified</label>
    <type>Checkbox</type>
</CustomField>