force-app/zurich-base/main/default/objects/SendDocCUInfo__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Resultado del envio</description>
    <label>Result</label>
    <type>TextArea</type>
</CustomField>