force-app/zurich-base/main/default/objects/SendDocCUInfo__c/fields/SendDate__c.field-meta.xml
<CustomField>
    <fullName>SendDate__c</fullName>
    <description>Fecha y hora del envio realizado</description>
    <label>Send date</label>
    <type>DateTime</type>
</CustomField>