force-app/zurich-base/main/default/objects/SendDocCUInfo__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si se ha realizado el intento de envio</description>
    <label>Sent</label>
    <type>Checkbox</type>
</CustomField>